# witflix

./: README.md  main.py  pyproject.toml
ml_models/: mlx_summarizer.py  mlx_transcriber.py  wiflix_db.py  witflix_log.db
